css/style.css
/* ... */
#mobile-navigation > div:first-child > ul {
  margin: 0;
}
#mobile-navigation > div:nth-child(2) {
  width: 120px;
  height: 0;
  transition: height 300ms;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  margin-top: 20px;
}
#mobile-navigation > div:first-child > img {
  margin-right: 48px;
  margin-top: 12px;
}
#mobile-navigation > div:nth-child(2) > a {
  font-family: "Lato";
  font-weight: 900;
  font-size: 16px;
  color: #fff;
  text-decoration: none;
}
/*
#mobile-navigation > div:nth-child(2) > a:last-child {
  margin-bottom: 20px;
}
*/
#mobile-navigation.open > div:nth-child(2) {
  height: 252px;
  height: 192px;
}
/*
#mobile-navigation > div:first-child {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  width: 100%;
  background-image: url(../img/mobile-nav-bg.svg);
  background-repeat: no-repeat;
  background-size: cover;
}
#mobile-navigation > div:nth-child(2) {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  background-image: url(../img/mobile-nav-bg.png);
}
*/

section.book {
  width: calc(100% + 2px);
  max-width: calc(100% + 2px);
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: auto;
  overflow-y: visible;
  background-image: url(../img/gradient-bg.svg);
  background-repeat: no-repeat;
  background-size: cover;
  margin-top: -2px;
  margin-left: -1px;
  margin-right: -1px;
  min-height: 1100px;
  padding-top: 50px;
  pointer-events: none;
}
section.book > div {
  width: 100%;
  max-width: 100%;
  display: flex;
  justify-content: center;
  flex: auto;
  overflow-y: auto;
  pointer-events: none;
}

.header-title {
  max-width: 100%;
  position: relative;
  padding-top: 30px;
  margin-bottom: 24px;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  pointer-events: none;
}
.header-title > .available-wrap {
  margin-bottom: 20px;
  pointer-events: none;
}
.header-title .quote {
  font-family: 'Gentium Book Plus', serif;
  font-weight: bold;
  font-style: italic;
  font-size: 18px;
  line-height: 23px;
  text-align: center;
  color: #FFFFFF;
  display: block;
  position: relative;
  margin-bottom: 34px;
  padding: 34px 23px 0;
  pointer-events: none;
}
.header-title .quote img {
  position: relative;
}
.header-title .quote img:first-child {
  top: -24px;
}
.header-title .quote img:nth-child(2) {
  bottom: -15px;
}
.header-title h4 {
  margin: 0;
  font-family: 'Gentium Book Plus', serif;
  font-weight: bold;
  font-style: normal;
  font-size: 17px;
  line-height: 20px;
  text-align: center;
  color: #ffffff;
  margin-top: 18px;
}
.header-title h4 b {
  /*color: #272727;*/
}
.header-title > div:nth-child(2) {
  padding: 0 26px;
  box-sizing: border-box;
  pointer-events: none;
}
.header-title > div:nth-child(2) > h1 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 35px;
  line-height: 41px;
  text-align: center;
  color: #272727;
  margin: 0;
}
.header-title > div:nth-child(2) > h2 {
  font-family: "Lato";
  font-weight: normal;
  font-size: 21px;
  line-height: 25px;
  text-align: center;
  color: #272727;
  margin: 0 0 20px;
}
.header-title > img.mobile-book {
  max-height: 299px;
  margin-left: -10px;
}
.header-title > div > h3 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 22px;
  line-height: 27px;
  text-align: center;
  color: #272727;
  margin: 0 0 20px;
}
.header-title > .order-wrap {
  height: 55px;
  display: flex;
  flex-direction: column;
  align-items: center;
  /*transition: transform 0.5s ease-in-out;*/
  pointer-events: all;
}
.header-title > .order-wrap > div {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.header-title > .order-wrap a {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 53px;
  border-radius: 7px;
  background: #ff6e03;
  border: 1px solid #ffd800;
  box-shadow: -3px 1px 6px rgba(0, 0, 0, 0.68);
  text-decoration: none;

  font-family: "Lato";
  font-weight: 900;
  font-size: 16px;
  text-align: left;
  color: #fff;
  width: 204px;
  margin: 0px 0px 0px;
}
.header-title > .order-wrap a:last-child {
  width: 257px;
  margin-top: 20px;
}
#header-book {
  display: flex;
  align-items: flex-start;
  position: relative;
}
#header-book > img#book {
  max-height: 652px;
  margin-left: -10%;
  display: none;
}
#header-book > div {
  margin-left: -12%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 510px;
}
.slider-buttons {
  display: flex;
  visibility: visible;
}
.slider-buttons.hide {
  visibility: hidden;
}
#slider-buttons.slider-buttons.hide,
.order-wrap.hide {
  visibility: hidden;
}
.slider-buttons a {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 53px;
  border-radius: 7px;
  background: #ff6e03;
  border: 1px solid #ffd800;
  box-shadow: -3px 1px 6px rgba(0, 0, 0, 0.68);
  text-decoration: none;

  font-family: "Lato";
  font-weight: 900;
  font-size: 16px;
  text-align: left;
  color: #fff;
}
.slider-buttons a:first-child {
  width: 204px;
  margin-right: 30px;
}
.slider-buttons a:nth-child(2) {
  width: 257px;
}
@keyframes shine {
  0% {
      transform: translatex(0px) translatey(0px)
  }
  100% {
      transform: translatex(100px) translatey(100px);
  }
}

#header-book > div > div > h1 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 57px;
  text-align: left;
  color: #272727;
  max-width: 438px;
  margin: 60px 0 6px;
}
#header-book > div > div > h2 {
  font-family: "Lato";
  font-weight: normal;
  font-size: 27px;
  text-align: left;
  color: #272727;
  margin: 0 0 14px;
  max-width: 350px;
}
#header-book > div > h3 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 20px;
  text-align: left;
  color: #272727;
  margin: 0;
}
section.about {
  display: flex;
  justify-content: center;
  padding: 0 35px;
}
section.about > div {
  width: 100%;
  max-width: 60rem;
}
/* ... */

